refactor(vidingest): move query logic out of the artifact controllers
Three controllers held work every other controller delegates. They injected
repositories directly, carried @Transactional on handler methods, and one of
them implemented a query rule twice.

VideoMultimodalArtifactsController took three repositories and two mappers, and
wrote the fromSeconds/toSeconds window twice: as a Java stream filter for the
unpaged timeline, and as JPQL for the paged one. The two agreed, but nothing
made them agree — one rule, two implementations, one of them in a controller.
The unpaged endpoint now runs the same query with Pageable.unpaged().

SpeakerController did the display-name normalisation, the segment-count join and
an existence check inline, with @Transactional on the handler — which put the
transaction boundary on the HTTP request. It also threw Spring's
ResponseStatusException from what is really a domain condition; that is now
SpeakerNotFoundException, mapping to the same 404 through the handler like every
other not-found in the app.

KnowledgeController clamped the search limit with a MAX_SEARCH_LIMIT of 50 that
SemanticKnowledgeSearchService already applied internally — the same magic
number in two places. The cap and the default now live with the query they
bound, and the controller forwards a nullable limit.

New: MultimodalTimelineQueryService, OcrQueryService, SpeakerService,
KnowledgeQueryService. All four take VideoQueryService.ensureExists rather than
their own VideoRepository, which also removes three copies of a private
ensureVideoExists helper. Controllers keep parameter binding and OpenAPI
annotations, nothing else.

No behaviour change: same status codes, same payloads, same limit semantics
(null -> 10, clamped to [1, 50]). The only visible difference is the 404
ProblemDetail title for an unknown speaker, now "Not found" like the rest.

Test coverage follows the logic rather than shrinking with it. The WebMvc slices
import the real services instead